Animated Cover Banner

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^7.1.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-simple-typewriter": "^3.0.1",
+    "react-typewriter-animate": "^1.2.3"
   },
   "devDependencies": {
     "eslint": "8.22.0",
