--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-into-view": "^1.12.0",
     "react-typewriter-animate": "^1.2.3"
   },
   "devDependencies": {
