setting up nodemailer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "framer-motion": "^7.1.2",
     "next": "12.2.5",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll-into-view": "^1.12.0",
